--- a/.github/workflows/migrate-docker.yml
+++ b/.github/workflows/migrate-docker.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - migrate-to-7.5
+      - dtq-dev-7.5
   pull_request:
   workflow_dispatch:
 
@@ -24,9 +25,8 @@ jobs:
       # For a new commit on other branches, use the branch name as the tag for Docker image.
       # For a new tag, copy that tag name as the tag for Docker image.
       IMAGE_TAGS: |
-        type=raw,value=dspace-7_x_migrate,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=ref,event=branch,enable=${{ !endsWith(github.ref, github.event.repository.default_branch) }}
-        type=ref,event=tag
+        type=raw,value=migrate-to-7.5,
+        type=raw,value=dtq-dev-7.5
       # Define default tag "flavor" for docker/metadata-action per
       # https://github.com/docker/metadata-action#flavor-input
       # We turn off 'latest' tag by default.
