--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -10,7 +10,7 @@
 ARG JDK_VERSION=11
 
 # Step 1 - Run Maven Build
-FROM dataquest/dspace-dependencies:dspace-7_x as build
+FROM dataquest/dspace-dependencies:migrate-to-7.5 as build
 ARG TARGET_DIR=dspace-installer
 WORKDIR /app
 # The dspace-installer directory will be written to /install
