Updated cfg, fixed error because rest.properties.exposed was defined in two configuration files.

--- a/dspace/config/modules/rest.cfg
+++ b/dspace/config/modules/rest.cfg
@@ -48,7 +48,17 @@ rest.properties.exposed = google.recaptcha.mode
 rest.properties.exposed = cc.license.jurisdiction
 rest.properties.exposed = identifiers.item-status.register-doi
 rest.properties.exposed = authentication-password.domain.valid
-rest.properties.exposed = submit.type-bind.field
+# CLARIN
+rest.properties.exposed = lr.help.mail
+rest.properties.exposed = authentication-shibboleth.netid-header
+rest.properties.exposed = authentication-shibboleth.email-header
+rest.properties.exposed = authentication-shibboleth.firstname-header
+rest.properties.exposed = authentication-shibboleth.lastname-header
+rest.properties.exposed = dspace.name
+rest.properties.exposed = dspace.ui.url
+rest.properties.exposed = versioning.item.history.include.submitter
+rest.properties.exposed = statistics.cache-server.uri
+
 
 #---------------------------------------------------------------#
 # These configs are used by the deprecated REST (v4-6) module   #
