Copied fixes for the PRs: 277, 279, 281, 273, 284, 286, 296, 300, 308

--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -54,6 +54,7 @@ the email and the url is not on *.com domain and the part after schema:// is lon
 ##### HELP DESK #####
 # `lr.help.mail` is exposed to the FE - must be set as exposed
 
+rest.properties.exposed = lr.help.mail,authentication-shibboleth.netid-header,authentication-shibboleth.email-header,authentication-shibboleth.firstname-header,authentication-shibboleth.lastname-header,dspace.name,versioning.item.history.include.submitter,statistics.cache-server.uri,dspace.ui.url
 lr.help.mail = test@test.sk
 lr.help.phone = 0000
 
@@ -143,3 +144,7 @@ matomo.site.id = 1
 matomo.tracker.bitstream.site_id = 1
 matomo.tracker.oai.site_id = 1
 statistics.cache-server.uri = http://cache-server.none
+
+
+##### Importing #####
+import.metadata.field.not.update = dc.description.provenance, dc.date.available, dc.date.accessioned, dc.identifier.uri
