Updated IT test for Shibboleth auth

--- a/dspace-api/src/test/data/dspaceFolder/config/local.cfg
+++ b/dspace-api/src/test/data/dspaceFolder/config/local.cfg
@@ -27,6 +27,7 @@
 
 # Spring boot test: by default mock the server on the localhost (80)
 dspace.server.url = http://localhost
+dspace.ui.url = http://localhost:4000
 dspace.name = DSpace at My University
 # dspace.name = LINDAT/CLARIAH-CZ digital library at the Institute of Formal and Applied Linguistics (ÚFAL), Faculty of Mathematics and Physics, Charles University
 
