Internal/fix integration tests 75 (#311)
* trying action with different ref

* fixed checkstyle

* updated config, fixed several integration tests

* removed old zip file

* assurance

* dspace.ui.url was changed to http://localhost:4000

* internal/fix-another-integration-tests (#312)

* Set Default charset to UTF-8 in Integration tests

* Fixed test in the ExternalHandleRestRepositoryIT - problem was with encoding

* Fixed WorkspaceItemRestRepositoryIT#patchRejectLicenseTest - the configuration property that disable LicenseValidation was set to false.

* Fixed ClarinDiscoveryRestControllerIT.java#discoverFacetsDateTestWithLabels
FacetEntryMatcher.dateIssuedFacet(false), was missing

* Fixed ClarinDiscoveryRestControllerIT.java#discoverSearchObjectsTestWithBasicQuery missing FacetEntryMatcher.dateIssuedFacet(false),

* Fixed ClarinDiscoveryRestControllerIT tests by updating the discovery.xml

* Fixed MetadataExportSearchIT.exportMetadataSearchFilterDate - commented out the test for Date Issued date search filter which was removed from the discovery.xml

* test  (#317)

* Initial commit

* Fixed SystemWideAlertRestRepositoryIT - wrong Date comparing, the fix was copied from the upstream

* Copied fix from the upstream

* Enabled distribution license validation.

* Update build.yml

Added -fae to integration tests

* Removed unnecessary check

* Revert to DEFAULT_AMOUNT_FORMATS=81

* Fixed lookupPubmed test

---------

Co-authored-by: milanmajchrak <milan.majchrak@dataquest.sk>
Co-authored-by: milanmajchrak <90026355+milanmajchrak@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -524,7 +524,7 @@
                 </property>
             </activation>
             <properties>
-                <test.argLine>-Xmx1024m</test.argLine>
+                <test.argLine>-Xmx1024m -Dfile.encoding=UTF-8</test.argLine>
             </properties>
         </profile>
 
