enable different endpoint to S3 bitstorage (#338)
* enable different endpoint to S3 bitstorage

* modified tests

--- a/dspace/config/modules/assetstore.cfg
+++ b/dspace/config/modules/assetstore.cfg
@@ -55,3 +55,8 @@ assetstore.s3.awsSecretKey =
 # If the credentials are left empty,
 # then this setting is ignored and the default AWS region will be used.
 assetstore.s3.awsRegionName =
+
+# Configuring S3 with different endpoint than amazon can require pathstyle access which can be configured here
+assetstore.s3.pathStyleAccessEnabled = false
+# Leave empty to use default (Amazon AWS) endpoint
+assetstore.s3.endpoint =
