Full BE customization for TUL (#329)
* define citace pro in the config file

* rename the config and add it into the default res.properties.exposed

* configure the gg analytics

* add email config propertyy for the contact page

* add the email for lr.help.email

* remove redundant email

---------

Co-authored-by: HuynhKhoa1601 <huynhnhatkhoa21@gmail.com>
Co-authored-by: HuynhKhoa1601 <89246737+HuynhKhoa1601@users.noreply.github.com>

--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -54,8 +54,8 @@ the email and the url is not on *.com domain and the part after schema:// is lon
 ##### HELP DESK #####
 # `lr.help.mail` is exposed to the FE - must be set as exposed
 
-rest.properties.exposed = lr.help.mail,authentication-shibboleth.netid-header,authentication-shibboleth.email-header,authentication-shibboleth.firstname-header,authentication-shibboleth.lastname-header,dspace.name,versioning.item.history.include.submitter,statistics.cache-server.uri,dspace.ui.url
-lr.help.mail = test@test.sk
+rest.properties.exposed = lr.help.mail,authentication-shibboleth.netid-header,authentication-shibboleth.email-header,authentication-shibboleth.firstname-header,authentication-shibboleth.lastname-header,dspace.name,versioning.item.history.include.submitter,statistics.cache-server.uri,dspace.ui.url,citace.pro.url, citace.pro.allowed, citace.pro.university,google.analytics.key
+lr.help.mail = marketa.trykarova@tul.cz
 lr.help.phone = 0000
 
 # Admin could upload the file bigger than maximum upload size.
@@ -145,6 +145,31 @@ matomo.tracker.bitstream.site_id = 1
 matomo.tracker.oai.site_id = 1
 statistics.cache-server.uri = http://cache-server.none
 
+
+##### Citacepro config #####
+citace.pro.url = https://www.citacepro.com/api/dspace/citace/oai
+citace.pro.university = dspace.tul.cz
+
+# only use true or false for the value of citace pro allowed
+citace.pro.allowed = true
+
+#google config
+google.analytics.key=G-7TQKPY3171
+
+# The max number of events held in the GA buffer (default: 256)
+google.analytics.buffer.limit=256
+
+# Define cron for how frequently events tracked in the DSpace backend will be sent to Google Analytics
+# This MUST be enabled if you wish to use `google.analytics.api-secret` to track bitstream download statistics (and similar)
+# Cron syntax is defined at https://www.quartz-scheduler.org/api/2.3.0/org/quartz/CronTrigger.html
+# Keep in mind, changing the schedule requires rebooting your servlet container, e.g. Tomcat.
+# The below example will run this task daily, every 5 minutes
+google.analytics.cron = 0 0/1 * * * ?
+
+# Defines a Measurement Protocol API Secret to be used to track interactions which occur outside of the user's browser.
+# For example , this is required to track downloads of bitstreams. This setting is only used by Google Analytics 4.
+# For more details see https://developers.google.com/analytics/devguides/collection/protocol/ga4
+google.analytics.api-secret = EvBfmLs_QPaKei9XRibauw
 
 ##### Importing #####
 import.metadata.field.not.update = dc.description.provenance, dc.date.available, dc.date.accessioned, dc.identifier.uri
