--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,9 +24,7 @@ jobs:
       # For a new commit on other branches, use the branch name as the tag for Docker image.
       # For a new tag, copy that tag name as the tag for Docker image.
       IMAGE_TAGS: |
-        type=raw,value=dspace-7_x,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=ref,event=branch,enable=${{ !endsWith(github.ref, github.event.repository.default_branch) }}
-        type=ref,event=tag
+        type=raw,value=ds75
       # Define default tag "flavor" for docker/metadata-action per
       # https://github.com/docker/metadata-action#flavor-input
       # We turn off 'latest' tag by default.
