--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -328,7 +328,7 @@ handle.dir = ${dspace.dir}/handle-server
 # List any additional prefixes that need to be managed by this handle server
 # (as for examle handle prefix coming from old dspace repository merged in
 # that repository)
-# handle.additional.prefixes = prefix1[, prefix2]
+handle.additional.prefixes = 11858, 11234, 11372, 11346, 20.500.12801, 20.500.12800
 
 # Whether to enable the DSpace handle resolver endpoints necessary for
 # https://github.com/DSpace/Remote-Handle-Resolver
