internal/shibboleth-missing-one-error-page
* The netId is added to the user which is logged in via shibboleth.

* Fixed failing integration tests.

* Shib login filter returns the duplicate error

* Fixed checkstyle issues

* Added an email param into error response

* Try to fix IT

* Fixed some IT

* The user is not registered if he doesn't have the email

* Fixed IT - there must be unique handle

--- a/dspace-api/src/test/data/dspaceFolder/config/local.cfg
+++ b/dspace-api/src/test/data/dspaceFolder/config/local.cfg
@@ -85,6 +85,9 @@ handle.remote-resolver.enabled = true
 # of this DSpace installation, whenever the `handle.remote-resolver.enabled = true`.
 handle.hide.listhandles = false
 
+# Set is to null because of failing some IT
+handle.additional.prefixes =
+
 #####################
 # LOGLEVEL SETTINGS #
 #####################
