Themed by Dataquest URL is defined in the cfg

--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -213,3 +213,6 @@ event.dispatcher.default.consumers = versioning, discovery, eperson, doi
 
 # Edit Item - Status option
 identifiers.item-status.register-doi = true
+
+##### Dataquest URL - sing in the footer #####
+themed.by.url = https://www.dataquest.sk/dspace
