--- a/dspace/config/modules/rest.cfg
+++ b/dspace/config/modules/rest.cfg
@@ -58,6 +58,7 @@ rest.properties.exposed = dspace.name
 rest.properties.exposed = dspace.ui.url
 rest.properties.exposed = versioning.item.history.include.submitter
 rest.properties.exposed = statistics.cache-server.uri
+rest.properties.exposed = themed.by.url
 # TUL
 rest.properties.exposed = dspace.ui.url
 rest.properties.exposed = versioning.item.history.include.submitter
