--- a/dspace/config/modules/versioning.cfg
+++ b/dspace/config/modules/versioning.cfg
@@ -5,7 +5,7 @@
 #---------------------------------------------------#
 # The property versioning.enabled is used to enabled/disable versioning in DSpace,
 # the default value is true if it unset
-# versioning.enabled = true 
+versioning.enabled = false
 
 # Control if the history overview of an item should only be shown to administrators
 # If enabled only the administrators for the item will be able to view the versioning history
@@ -19,4 +19,4 @@ versioning.item.history.include.submitter=false
 
 # If you want to allow submitters to create new versions of there items, set
 # the property submitterCanCreateNewVersion true.
-# versioning.submitterCanCreateNewVersion=false
+versioning.submitterCanCreateNewVersion=false
