Created the property to define the company which has customized this DSpace

--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -216,3 +216,4 @@ identifiers.item-status.register-doi = true
 
 ##### Dataquest URL - sing in the footer #####
 themed.by.url = https://www.dataquest.sk/dspace
+themed.by.company.name = dataquest s.r.o.
