--- a/dspace/config/modules/rest.cfg
+++ b/dspace/config/modules/rest.cfg
@@ -59,6 +59,7 @@ rest.properties.exposed = dspace.ui.url
 rest.properties.exposed = versioning.item.history.include.submitter
 rest.properties.exposed = statistics.cache-server.uri
 rest.properties.exposed = themed.by.url
+rest.properties.exposed = themed.by.company.name
 # TUL
 rest.properties.exposed = dspace.ui.url
 rest.properties.exposed = versioning.item.history.include.submitter
