tul/fix-integration-tests (#361)
* Ignored some ClarinIntegrationTests which should not be run

* Removed versioning.submitterCanCreateNewVersion

--- a/dspace/config/modules/versioning.cfg
+++ b/dspace/config/modules/versioning.cfg
@@ -19,4 +19,4 @@ versioning.item.history.include.submitter=false
 
 # If you want to allow submitters to create new versions of there items, set
 # the property submitterCanCreateNewVersion true.
-versioning.submitterCanCreateNewVersion=false
+# versioning.submitterCanCreateNewVersion=false
