--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -137,7 +137,7 @@ discojuice.rewriteCountries = https://idp.scc.kit.edu/idp/shibboleth, https://fe
 
 ##### Matomo statistics #####
 # Auth token
-matomo.track.enabled = true
+matomo.track.enabled = false
 matomo.auth.token = 26388b4164695d69e6ee6e2dd527b723
 matomo.site.id = 1
 matomo.tracker.bitstream.site_id = 1
