Discofeed is turned off (#370)

--- a/dspace-api/src/test/data/dspaceFolder/config/local.cfg
+++ b/dspace-api/src/test/data/dspaceFolder/config/local.cfg
@@ -201,6 +201,8 @@ featured.service.teitok.description = A web-based platform for viewing, creating
 
 
 ##### Shibboleth #####
+# Turn off the discofeed, it is allowed by default
+shibboleth.discofeed.allowed = true
 # File where is DiscoJuiceFeed response
 shibboleth.discofeed.url = TEST:/org/dspace/app/rest/discofeedResponse.json
 
