--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -155,7 +155,7 @@ citace.pro.university = dspace.tul.cz
 citace.pro.allowed = true
 
 #google config
-google.analytics.key=G-7TQKPY3171
+google.analytics.key=UA-134956309-1
 
 # The max number of events held in the GA buffer (default: 256)
 google.analytics.buffer.limit=256
@@ -170,7 +170,7 @@ google.analytics.cron = 0 0/1 * * * ?
 # Defines a Measurement Protocol API Secret to be used to track interactions which occur outside of the user's browser.
 # For example , this is required to track downloads of bitstreams. This setting is only used by Google Analytics 4.
 # For more details see https://developers.google.com/analytics/devguides/collection/protocol/ga4
-google.analytics.api-secret = EvBfmLs_QPaKei9XRibauw
+# google.analytics.api-secret = EvBfmLs_QPaKei9XRibauw
 
 ##### Importing #####
 import.metadata.field.not.update = dc.description.provenance, dc.date.available, dc.date.accessioned, dc.identifier.uri
@@ -188,7 +188,7 @@ identifier.doi.prefix = 10.5072
 # If you want to, you can further separate your namespace. Should all the
 # suffixes of all DOIs minted by DSpace start with a special string to separate
 # it from other services also minting DOIs under your prefix?
-# identifier.doi.namespaceseparator = dspace/
+identifier.doi.namespaceseparator = dspace/
 
 ##
 ## Configure XSLT-driven submission crosswalk for DataCite
