Fixed wrong revert

--- a/dspace/config/modules/rest.cfg
+++ b/dspace/config/modules/rest.cfg
@@ -60,6 +60,7 @@ rest.properties.exposed = versioning.item.history.include.submitter
 rest.properties.exposed = statistics.cache-server.uri
 rest.properties.exposed = themed.by.url
 rest.properties.exposed = themed.by.company.name
+rest.properties.exposed = identifier.doi.resolver
 # TUL
 rest.properties.exposed = dspace.ui.url
 rest.properties.exposed = versioning.item.history.include.submitter
@@ -67,7 +68,6 @@ rest.properties.exposed = statistics.cache-server.uri
 rest.properties.exposed = citace.pro.url
 rest.properties.exposed = citace.pro.university
 rest.properties.exposed = citace.pro.allowed
-
 
 
 #---------------------------------------------------------------#
