Revert "Merge branch 'tul/merge-into-clarin-dspace' into customer/TUL" (#400)
This reverts commit 49e8c937a0e303bafd0553bda22e835b4942e7d5, reversing
changes made to c88354edae037ffb0d1daaaae01c49125ff6b605.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ name: Docker images
 on:
   push:
     branches:
-      - dtq-dev
+      - customer/TUL
   pull_request:
   workflow_dispatch:
 
@@ -170,11 +170,11 @@ jobs:
           labels: ${{ steps.meta_build_cli.outputs.labels }}
 
       - name: redeploy
-        if: 'false'
+        if: '!cancelled()'
         run: |
           curl -H "Accept: application/vnd.github.everest-preview+json" \
           -H "Authorization: token ${{ secrets.DEPLOY_DEV5_GH_ACTION_DISPATCH }}" \
           --request POST \
           https://api.github.com/repos/dataquest-dev/\
           dspace-angular/actions/workflows/deploy.yml/dispatches \
-          --data "{\"ref\":\"refs/heads/dtq-dev\"}"
+          --data "{\"ref\":\"refs/heads/customer/TUL\"}"
