--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -9,6 +9,7 @@ on:
   
 jobs:
   retag-BE-image:
+  runs-on: ubuntu-latest
     steps:
       - name: Login to DockerHub
         uses: docker/login-action@v3
