--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -288,3 +288,14 @@ elg.download-location.exposed = 0
 # left here for reference
 #download.email.cc = ${info.recipient}
 download.email.cc = ${mail.admin}
+
+#### Submission forms ####
+# `autocomplete.custom.separator.*` is a special separator used to distinguish values
+# in the results from the current Solr index. For example, `solr-subject_ac` is a special index for subjects,
+# and its values look like this: `value1 ||| VALUE1`. The correct value is the second one.
+# `//` is because of special character
+autocomplete.custom.separator.solr-subject_ac = \\|\\|\\|
+autocomplete.custom.separator.solr-publisher_ac = \\|\\|\\|
+autocomplete.custom.separator.solr-dataProvider_ac = \\|\\|\\|
+autocomplete.custom.separator.solr-dctype_ac = \\|\\|\\|
+autocomplete.custom.allowed = solr-author_ac,solr-publisher_ac,solr-dataProvider_ac,solr-dctype_ac,solr-subject_ac,solr-handle_title_ac,json_static-iso_langs.json
