--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -298,4 +298,5 @@ autocomplete.custom.separator.solr-subject_ac = \\|\\|\\|
 autocomplete.custom.separator.solr-publisher_ac = \\|\\|\\|
 autocomplete.custom.separator.solr-dataProvider_ac = \\|\\|\\|
 autocomplete.custom.separator.solr-dctype_ac = \\|\\|\\|
+autocomplete.custom.separator.solr-author_ac = \\|\\|\\|
 autocomplete.custom.allowed = solr-author_ac,solr-publisher_ac,solr-dataProvider_ac,solr-dctype_ac,solr-subject_ac,solr-handle_title_ac,json_static-iso_langs.json
