UFAL/Matomo statistics with dimension (#813)
* Updated the version of matomo dependency and tried to change request from Custom Variables to Dimension

* Added a custom dimension with item's handle URL

* Send custom dimension also in oai tracker

* Use only IPv4 address, the Matomo tracker has a problem with IPv6

* Do not change custom dimension when the Item is null

* First custom dimension should have ID '1'.

* Use a valid URL for Matomo tracker in the IT

* Configure handle custom dimension ID in the clarin-dspace.cfg

* Refactored ipv4 method to be more readable - return null

---------

Co-authored-by: Juraj Roka <juraj.roka@dataquest.sk>
Co-authored-by: milanmajchrak <milan.majchrak@dataquest.sk>
Co-authored-by: milanmajchrak <90026355+milanmajchrak@users.noreply.github.com>

--- a/dspace-api/src/test/data/dspaceFolder/config/local.cfg
+++ b/dspace-api/src/test/data/dspaceFolder/config/local.cfg
@@ -312,6 +312,10 @@ webui.supported.locales = en
 # When title is something like "Type-bind test" the type-bind field will popped up
 submit.type-bind.field = dc.type,dc.identifier.citation=>dc.title
 
+# The configuration for the Matomo tracker must have a valid URL, as it will throw an exception if it does not.
+matomo.tracker.host.url = http://localhost:8135/matomo.php
+
 autocomplete.custom.separator.solr-subject_ac = \\|\\|\\|
 autocomplete.custom.separator.solr-title_ac = \\|\\|\\|
 autocomplete.custom.allowed = solr-author_ac,solr-publisher_ac,solr-dataProvider_ac,solr-dctype_ac,solr-subject_ac,solr-handle_title_ac,json_static-iso_langs.json,solr-title_ac
+
