--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -155,6 +155,7 @@ matomo.site.id = 1
 matomo.tracker.bitstream.site_id = 1
 matomo.tracker.oai.site_id = 1
 matomo.tracker.host.url = http://url:port/matomo.php
+matomo.custom.dimension.handle.id = 1
 statistics.cache-server.uri = http://cache-server.none
 
 #### Statistic usage reports ####
