--- a/dspace-api/pom.xml
+++ b/dspace-api/pom.xml
@@ -339,8 +339,8 @@
     <dependencies>
         <dependency>
             <groupId>org.piwik.java.tracking</groupId>
-            <artifactId>matomo-java-tracker</artifactId>
-            <version>2.0</version>
+            <artifactId>matomo-java-tracker-java11</artifactId>
+            <version>3.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
