The `dspace.name.short` is not working properly in the email, use `dspace.shortname` instead (#828)

--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -5,7 +5,7 @@
 #------------------------------------------------------------------#
 #---------------------------DSpace---------------------------------#
 #------------------------------------------------------------------#
-dspace.name.short = DSpace
+dspace.shortname = DSpace
 dspace.name = CLARIN DSpace
 
 #------------------------------------------------------------------#
