--- a/dspace/config/modules/healthcheck.cfg
+++ b/dspace/config/modules/healthcheck.cfg
@@ -5,10 +5,8 @@
 # If you use the Pre-DSpace-3.0 embargo feature, you might want to
 # add 'Embargo items (Pre-3.0),' to the following list.
 healthcheck.checks = General Information,\
-    Checksum,\
     Item summary,\
-    User summary,\
-    Log Analyser Check
+    User summary
 
 plugin.named.org.dspace.health.Check = \
     org.dspace.health.InfoCheck =                     General Information,\
@@ -18,5 +16,5 @@ plugin.named.org.dspace.health.Check = \
     org.dspace.health.UserCheck =                     User summary,\
     org.dspace.health.LogAnalyserCheck =              Log Analyser Check
 
-# report from the last N days (where dates are applicable)
+# default value of the report from the last N days (where dates are applicable)
 healthcheck.last_n_days = 7
