--- a/dspace/config/clarin-dspace.cfg
+++ b/dspace/config/clarin-dspace.cfg
@@ -154,7 +154,7 @@ matomo.auth.token = 26388b4164695d69e6ee6e2dd527b723
 matomo.site.id = 1
 matomo.tracker.bitstream.site_id = 1
 matomo.tracker.oai.site_id = 1
-matomo.tracker.host.url = http://url:port/matomo.php
+matomo.tracker.host.url = http://localhost.changeme/matomo.php
 matomo.custom.dimension.handle.id = 1
 statistics.cache-server.uri = http://cache-server.none
 
