Res policy for submitter (#862)
* created res policy if eperson is submitter

* allowed submitter edit metadata only in collections from cfg

* test for ID collection allowed by cfg

* created res policy during item installation, tests

* added check if user is submitter

* renamed property, default value if is not defined

* added comments why the property is not commented

--- a/dspace-api/src/test/data/dspaceFolder/config/local.cfg
+++ b/dspace-api/src/test/data/dspaceFolder/config/local.cfg
@@ -319,3 +319,8 @@ autocomplete.custom.separator.solr-subject_ac = \\|\\|\\|
 autocomplete.custom.separator.solr-title_ac = \\|\\|\\|
 autocomplete.custom.allowed = solr-author_ac,solr-publisher_ac,solr-dataProvider_ac,solr-dctype_ac,solr-subject_ac,solr-handle_title_ac,json_static-iso_langs.json,solr-title_ac
 
+##### METADATA EDIT #####
+#### name || id
+### these collections allow submitters to edit metadata of their items
+# property is not commented, because of tests
+allow.edit.metadata =
